--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,9 @@ edition = "2018"
 [dependencies]
 serde = "1.0"
 serde_json = "1.0"
+serde_derive = "1.0"
+toml = "0.5"
 hyper = "0.12"
+url = "1.7"
 futures = "0.1"
 graphql-parser = "0.2.3"
