Preps for switching schema data

--- a/database/config.toml
+++ b/database/config.toml
@@ -2,11 +2,11 @@
 instropection = "instropection.gql"
 canonical = "canonical.gql"
 
-[[database]]
-name = "swapi"
-data = "data.json"
-schema = "schema.gql"
-format = "json"
+# [[database]]
+# name = "swapi"
+# data = "data.json"
+# schema = "schema.gql"
+# format = "json"
 
 [[database]]
 name = "posts"
